--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "zendframework/zend-expressive-fastroute": "^1.0",
         "zendframework/zend-servicemanager": "^2.7.3 || ^3.0",
         "zendframework/zend-expressive-zendviewrenderer": "^1.0",
-        "dasprid/container-interop-doctrine": "^0.2.3"
+        "dasprid/container-interop-doctrine": "^0.2.3",
+        "zendframework/zend-form": "^2.9",
+        "zendframework/zend-validator": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
